--- a/authentication/templates/verify_account.html
+++ b/authentication/templates/verify_account.html
@@ -45,7 +45,7 @@
                     <!-- Sign In Link -->
                     <div class="text-center">
                         <p class="text-gray-600 mb-5">Already have an account?</p>
-                        <a href="#" class="btn btn-outline btn-secondary">SIGN IN</a>
+                        <a href="/login/" class="btn btn-outline btn-secondary">SIGN IN</a>
                     </div>
                 </form>
             </div>
