--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -25,7 +25,7 @@
                     <!-- Username Field -->
                     <div class="form-control">
                         <label class="label" for="username">
-                            <span class="label-text">username</span>
+                            <span class="label-text">Username</span>
                         </label>
                         <input type="text" name="username" placeholder="Username" class="input input-bordered"
                             required />
