--- a/authentication/templates/signup.html
+++ b/authentication/templates/signup.html
@@ -27,7 +27,7 @@
                             class="input input-bordered" required />
                     </div>
                     <!-- Firstname Field -->
-                    <div class="form-control">
+                    <div class="form-control mt-2">
                         <label class="label" for="firstname">
                             <span class="label-text">Firstname</span>
                         </label>
@@ -35,7 +35,7 @@
                             class="input input-bordered" required />
                     </div>
                     <!-- Lastname Field -->
-                    <div class="form-control">
+                    <div class="form-control mt-2">
                         <label class="label" for="lastname">
                             <span class="label-text">Lastname</span>
                         </label>
@@ -43,7 +43,7 @@
                             class="input input-bordered" required />
                     </div>
                     <!-- Password Field -->
-                    <div class="form-control mt-4">
+                    <div class="form-control mt-2">
                         <label class="label" for="password">
                             <span class="label-text">Password</span>
                         </label>
@@ -51,12 +51,12 @@
                             class="input input-bordered" required />
                     </div>
                     <!-- Password Confirmation Field -->
-                    <div class="form-control mt-4">
+                    <div class="form-control mt-2">
                         <label class="label" for="password-confirm">
-                            <span class="label-text">Password</span>
+                            <span class="label-text">Confirm Password</span>
                         </label>
-                        <input type="password" id="password-confirm" name="password" placeholder="Enter your password"
-                            class="input input-bordered" required />
+                        <input type="password" id="password-confirm" name="password"
+                            placeholder="Enter your confirm password" class="input input-bordered" required />
                     </div>
                     <!-- Submit Button -->
                     <div class="form-control mt-6">
